--- a/src/padwindow.ui
+++ b/src/padwindow.ui
@@ -18,10 +18,23 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
-      <width>331</width>
-      <height>261</height>
+      <y>30</y>
+      <width>311</width>
+      <height>221</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="propertiesButton">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>0</y>
+      <width>95</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Properties</string>
     </property>
    </widget>
   </widget>
